http://bugzilla.liquidsys.com/show_bug.cgi?id=3083 bug: 3083 - Contact cards view: tag gets rendered outside view pane if content overflows
Copied from Perforce
 Change: 12873

--- a/WebRoot/js/zimbraMail/config/style/zm.css
+++ b/WebRoot/js/zimbraMail/config/style/zm.css
@@ -1111,7 +1111,8 @@ td.DDSepInvisible div {background-color:transparent;width:1px;overflow:hidden;}
 
 .ZmContactInfoView .contactHeader, 
 .ZmContactView .contactHeader,
-.ZmContactCardsView .contactHeader {
+.ZmContactCardsView .contactHeader,
+.ZmContactCard-dnd .contactHeader {
 	font-size: 22px;
 	font-weight: bold;
 	background-color: #CCCCCC;
